--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,18 @@ email: m.muench@vu.nl
 description: >- # this means to ignore newlines until "baseurl:"
   A community maintained overview and categorization of rehosting frameworks.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://sota.rehosti.ng"
+url: "https://rehosti.ng"
 twitter_username: TBD
 github_username:  rehosting
 
 
 header_pages:
     - index.md
+    - sota.md
     - faq.md
     - links.md
+    - invite.md
+    - about.md
 
 collections:
     - systems
